--- a/homework/HW5/Tone-A5.ipynb
+++ b/homework/HW5/Tone-A5.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
     "test_perc_correct1 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct1:.2f}', \"Percent Correct\": f'{test_perc_correct1:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct1:.2f}', \"Test Accuracy\": f'{test_perc_correct1:.2f}'})"
    ]
   },
   {
@@ -2140,7 +2140,7 @@
     "test_perc_correct2 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct2:.2f}', \"Percent Correct\": f'{test_perc_correct2:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct2:.2f}', \"Test Accuracy\": f'{test_perc_correct2:.2f}'})"
    ]
   },
   {
@@ -2173,7 +2173,7 @@
     "test_perc_correct3 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct3:.2f}', \"Percent Correct\": f'{test_perc_correct3:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct3:.2f}', \"Test Accuracy\": f'{test_perc_correct3:.2f}'})"
    ]
   },
   {
@@ -2223,7 +2223,7 @@
     "test_perc_correct4 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct4:.2f}', \"Percent Correct\": f'{test_perc_correct4:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct4:.2f}', \"Test Accuracy\": f'{test_perc_correct4:.2f}'})"
    ]
   },
   {
@@ -2273,7 +2273,7 @@
     "test_perc_correct5 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct5:.2f}', \"Percent Correct\": f'{test_perc_correct5:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct5:.2f}', \"Test Accuracy\": f'{test_perc_correct5:.2f}'})"
    ]
   },
   {
@@ -2323,7 +2323,7 @@
     "test_perc_correct6 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct6:.2f}', \"Percent Correct\": f'{test_perc_correct6:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct6:.2f}', \"Test Accuracy\": f'{test_perc_correct6:.2f}'})"
    ]
   },
   {
@@ -2373,7 +2373,7 @@
     "test_perc_correct7 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct7:.2f}', \"Percent Correct\": f'{test_perc_correct7:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct7:.2f}', \"Test Accuracy\": f'{test_perc_correct7:.2f}'})"
    ]
   },
   {
@@ -2423,7 +2423,7 @@
     "test_perc_correct8 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct8:.2f}', \"Percent Correct\": f'{test_perc_correct8:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct8:.2f}', \"Test Accuracy\": f'{test_perc_correct8:.2f}'})"
    ]
   },
   {
@@ -2473,7 +2473,7 @@
     "test_perc_correct9 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct9:.2f}', \"Percent Correct\": f'{test_perc_correct9:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct9:.2f}', \"Test Accuracy\": f'{test_perc_correct9:.2f}'})"
    ]
   },
   {
@@ -2523,7 +2523,7 @@
     "test_perc_correct0 = 100 * np.mean(Classes == Ttest)\n",
     "result.append({\"Hiddens / Layer\": n_hiddens_per_conv_layer, \"Hiddens / FC Layer\": n_hiddens_per_fc_layer, \n",
     "               \"Patch Size / Conv Layer\": patch_size_per_conv_layer, \"Stride / Conv Layer\": stride_per_conv_layer, \n",
-    "               \"Train Accuracy\": f'{train_perc_correct0:.2f}', \"Percent Correct\": f'{test_perc_correct0:.2f}'})"
+    "               \"Train Accuracy\": f'{train_perc_correct0:.2f}', \"Test Accuracy\": f'{test_perc_correct0:.2f}'})"
    ]
   },
   {
